--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,3 +33,34 @@ code {
   color: black;
   padding: 1em;
 }
+
+.addform{
+  display: flex;
+  width: 50em;
+  margin-left: 3em;
+  gap: 1em;
+}
+
+.buttons{
+  padding: .4em 1em;
+  border: none;
+  border-radius: .1em;
+  background-color: rgb(45, 45, 185);
+  color: white;
+}
+
+.delete{
+  margin-left: 3em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+select{
+  padding: .4em;
+  border-radius: .3em;
+  border: 1px solid grey;
+}
+
+.home{
+  padding: 3em;
+}
